--- a/README
+++ b/README
@@ -1,7 +1,9 @@
-BoneJ 1.x.x
+BoneJ 2.x.x
 
 BoneJ is a collection of plugins for bone image analysis in the free
 image analysis program ImageJ.  It implements a number of common morphological
 algorithms, most of which run in 3D.
+
+This is the development version for the totally refactored ImageJ2.
 
 Full documentation for BoneJ can be found at http://bonej.org/
